--- a/index.html
+++ b/index.html
@@ -1753,9 +1753,9 @@
     .history-panel__chart[data-average-status="note"] .history-panel__chart-count{ color:#1d4ed8; background:rgba(59,130,246,0.16); }
     .history-panel__chart[data-average-status="na"] .history-panel__chart-count{ color:#475569; background:rgba(148,163,184,0.16); }
     .history-panel__chart-values{ display:flex; align-items:center; justify-content:space-between; font-size:.75rem; color:#475569; text-transform:uppercase; letter-spacing:.08em; }
-    .history-panel__chart-figure{ margin:0; position:relative; }
+    .history-panel__chart-figure{ margin:0; position:relative; --history-chart-padding-top:28px; --history-chart-padding-right:28px; --history-chart-padding-bottom:28px; --history-chart-padding-left:28px; }
     .history-panel__chart-figure--with-scale{ display:flex; }
-    .history-panel__chart-scale{ display:flex; flex-direction:column-reverse; justify-content:space-between; width:3.75rem; padding:28px 0; margin-right:.75rem; font-size:.72rem; color:#475569; text-transform:none; letter-spacing:0; }
+    .history-panel__chart-scale{ display:flex; flex-direction:column-reverse; justify-content:space-between; width:3.75rem; padding:var(--history-chart-padding-top) 0 var(--history-chart-padding-bottom); margin-right:.75rem; font-size:.72rem; color:#475569; text-transform:none; letter-spacing:0; }
     .history-panel__chart-scale-label{ position:relative; padding-right:.75rem; text-align:right; font-weight:600; }
     .history-panel__chart-scale-label::after{ content:""; position:absolute; right:0; top:50%; width:.75rem; height:1px; background:rgba(148,163,184,0.45); transform:translateY(-50%); }
     .history-panel__chart-canvas{ flex:1; }
