--- a/index.html
+++ b/index.html
@@ -1716,6 +1716,8 @@
     .history-panel__value[data-status="ko-strong"]{ color:#991b1b; }
     .history-panel__value[data-status="note"]{ color:#1d4ed8; }
     .history-panel__value[data-status="na"]{ color:#475569; }
+    .history-panel__item--summary .history-panel__value,
+    .history-panel__item--summary .history-panel__value span:last-child{ color:#6b21a8; }
     .history-panel__value span:last-child{ display:block; white-space:normal; word-break:break-word; overflow-wrap:break-word; }
     .history-panel__value span:last-child ul,
     .history-panel__value span:last-child ol{ margin:.35rem 0; padding-left:1.25rem; }
@@ -1733,8 +1735,11 @@
     .history-panel__meta-row{ font-size:.75rem; color:#64748b; }
     .history-panel__meta{ display:inline-flex; align-items:center; gap:.25rem; background:rgba(148,163,184,0.16); padding:.25rem .55rem; border-radius:.75rem; }
     .history-panel__note{ margin:0; font-size:.85rem; color:#475569; line-height:1.45; word-break:break-word; }
-    .history-panel__note--bilan{ display:flex; flex-direction:column; gap:.35rem; }
-    .history-panel__note-badge{ display:inline-flex; align-items:center; gap:.25rem; padding:.2rem .6rem; border-radius:999px; background:rgba(59,130,246,0.12); color:#1d4ed8; font-size:.7rem; font-weight:600; letter-spacing:.01em; }
+    .history-panel__note--bilan{ display:flex; flex-direction:column; gap:.35rem; color:#6b21a8; }
+    .history-panel__item--summary .history-panel__dot{ background:#a855f7; }
+    .history-panel__item--summary .history-panel__summary-marker{ background:rgba(139,92,246,0.16); color:#6b21a8; box-shadow:0 0 0 1.5px rgba(139,92,246,0.24); }
+    .history-panel__item--summary .history-panel__summary-marker::before{ content:"★"; }
+    .history-panel__note-badge{ display:inline-flex; align-items:center; gap:.25rem; padding:.2rem .6rem; border-radius:999px; background:rgba(139,92,246,0.16); color:#6b21a8; font-size:.7rem; font-weight:600; letter-spacing:.01em; }
     .history-panel__note-text{ display:block; }
     .history-panel__empty{ margin:0; padding:1rem; border-radius:.9rem; border:1px dashed rgba(148,163,184,0.45); background:#f8fafc; color:#64748b; font-size:.9rem; text-align:center; }
     .history-panel__chart{ margin:0 0 1.25rem; padding:1.25rem; border-radius:1rem; border:1px solid rgba(148,163,184,0.2); background:linear-gradient(180deg, rgba(241,245,249,0.55), rgba(255,255,255,0.9)); box-shadow:0 12px 24px rgba(15,23,42,0.08); display:flex; flex-direction:column; gap:.75rem; position:relative; overflow:visible; }
@@ -1807,8 +1812,8 @@
     .history-panel__chart-axis-marker--boundary .history-panel__chart-axis-label{ color:#0f172a; font-weight:600; }
     .history-panel__chart--empty{ align-items:center; justify-content:center; text-align:center; }
     .history-panel__chart-empty-text{ margin:0; font-size:.85rem; color:#475569; }
-    .history-panel__item--summary{ border-color:rgba(59,130,246,0.25); background:linear-gradient(180deg, rgba(191,219,254,0.18), rgba(255,255,255,0.95)); }
-    .history-panel__summary-badge{ display:inline-flex; align-items:center; gap:.3rem; padding:.2rem .65rem; border-radius:.75rem; font-size:.75rem; font-weight:600; background:rgba(37,99,235,0.12); color:#1d4ed8; }
+    .history-panel__item--summary{ border-color:rgba(139,92,246,0.28); background:linear-gradient(180deg, rgba(233,213,255,0.2), rgba(255,255,255,0.95)); }
+    .history-panel__summary-badge{ display:inline-flex; align-items:center; gap:.3rem; padding:.2rem .65rem; border-radius:.75rem; font-size:.75rem; font-weight:600; background:rgba(139,92,246,0.14); color:#6b21a8; }
 
   </style>
 </head>
