--- a/index.html
+++ b/index.html
@@ -1736,7 +1736,7 @@
     .history-panel__item-edit:focus-visible{ outline:2px solid rgba(59,130,246,0.4); outline-offset:2px; }
     .history-panel__value{ display:flex; align-items:flex-start; gap:.55rem; font-size:1.05rem; font-weight:600; color:#0f172a; transition:color .15s ease; }
     .history-panel__value--summary{ gap:.75rem; }
-    .history-panel__summary-marker{ display:inline-flex; align-items:center; justify-content:center; width:1.5rem; height:1.5rem; border-radius:999px; background:rgba(59,130,246,0.16); color:#1d4ed8; font-size:.8rem; font-weight:700; line-height:1; box-shadow:0 0 0 1.5px rgba(59,130,246,0.18); margin-top:.1rem; }
+    .history-panel__summary-marker{ display:inline-flex; align-items:center; justify-content:center; width:1.5rem; height:1.5rem; border-radius:999px; background:rgba(139,92,246,0.18); color:#6d28d9; font-size:.8rem; font-weight:700; line-height:1; box-shadow:0 0 0 1.5px rgba(139,92,246,0.22); margin-top:.1rem; }
     .history-panel__summary-marker::before{ content:"★"; }
     .history-panel__value[data-status="ok-strong"]{ color:#166534; }
     .history-panel__value[data-status="ok-soft"]{ color:#15803d; }
